<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_diagnosis"
        android:name="com.example.myapplication.ui.diagnosis.DiagnosisFragment"
        android:label="@string/title_diagnosis"
        tools:layout="@layout/fragment_diagnosis" />

    <fragment
        android:id="@+id/navigation_historique"
        android:name="com.example.myapplication.ui.historique.HistoriqueFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_historique" />
    <fragment
        android:id="@+id/navigation_illnesses"
        android:name="com.example.myapplication.ui.illnesses.MainActivity"
        android:label="@string/title_illnesses"
        tools:layout="@layout/activity_list_maladie" />
</navigation>