<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/header"
            android:elevation="50dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_alignParentTop="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginEnd="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.472"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.444"
                        app:srcCompat="@drawable/logo1" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="50dp"
                        android:text="DermApp"
                        android:textColor="#00BCB4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.567"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title"
                android:textColor="#00BCB4"
                android:textSize="22dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/header">
            <soup.neumorphism.NeumorphFloatingActionButton
                style="@style/Widget.Neumorph.FloatingActionButton"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/info"
                android:padding="15dp"
                android:layout_gravity="center"
                app:neumorph_shapeType="basin" />
            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="2">
                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:id="@+id/diagnosis_card"
                    android:layout_height="180dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="6dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginTop="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/settings"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_gravity="center"
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:elevation="50dp"
                            android:text="@string/about_section1"
                            android:textColor="#00b7e6"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/historique_card"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginTop="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/archive"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_gravity="center"
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:elevation="50dp"
                            android:text="@string/about_section2"
                            android:textColor="#ff725e"
                            android:textAlignment="center"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/illnesses_card"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginTop="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/search"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_gravity="center"
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:elevation="50dp"
                            android:text="@string/about_section3"
                            android:textColor="#00BCB4"
                            android:textAlignment="center"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginTop="10dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/home_info"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_gravity="center"
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:elevation="50dp"
                            android:text="@string/about_section4"
                            android:textColor="#d02282"
                            android:textAlignment="center"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
            <soup.neumorphism.NeumorphFloatingActionButton
                style="@style/Widget.Neumorph.FloatingActionButton"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/teamwork"
                android:padding="15dp"
                android:layout_gravity="center"
                app:neumorph_shapeType="basin"
                app:neumorph_backgroundColor="@color/white"
                android:background="@color/white"/>
            <soup.neumorphism.NeumorphCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Neumorph.CardView"
                app:neumorph_shapeType="pressed"
                android:padding="15dp">
                <soup.neumorphism.NeumorphTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/why_us"
                    android:background="@color/white"
                    android:textColor="#00BCB4"
                    android:padding="15dp"
                    style="@style/Widget.Neumorph.TextView"/>
            </soup.neumorphism.NeumorphCardView>
            <soup.neumorphism.NeumorphFloatingActionButton
                style="@style/Widget.Neumorph.FloatingActionButton"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/question"
                android:padding="15dp"
                android:layout_gravity="center"
                app:neumorph_shapeType="basin" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerview1"/>
        </LinearLayout>
</LinearLayout>
